--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "react-icons": "^5.3.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.28.0",
-    "react-typed": "^2.0.12",
-    "react-typical": "^0.1.3"
+    "react-typed": "^2.0.12"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
